2008-07-15 13:04 jannis

	* autogen.sh: Change @REVISION@ substitution for git svn repositories
	  again.

2008-07-09 23:57 jannis

	* autogen.sh: Fix @REVISION@ subsitution when using git svn. 

2008-01-14 02:08 jannis

	* configure.in.in: Fix debugging support for SVN snapshots. Until now
	  the default setting never was applied.

2007-10-01 21:21 jasper

	* libxfce4panel/xfce-panel-plugin-iface.c,
	  panel/panel-properties.c: To prevent panel items from increasing the
	  panel size, set the height of the XfceItembar instead of setting the
	  size specifically for all items.
	* libxfce4panel/xfce-panel-plugin-iface.c: Allow attach_widget to be
	  NULL in call to xfce_panel_plugin_position_widget() and fix up the
	  API documentation. Patch by Diego Ongaro and a few bits from me.
	* plugins/windowlist/windowlist.c: fix for popup menu at pointer
	  position. Another patch by Diego.

2007-09-30 20:14 jasper

	* libxfce4panel/xfce-panel-plugin-iface.c,
	  libxfce4panel/xfce-panel-plugin-iface.h,
	  plugins/launcher/launcher.c,
	  plugins/windowlist/windowlist.c: API change for popup menu functions.
	  The API now consists of three functions: 
	  xfce_panel_plugin_arrow_type(), xfce_panel_plugin_position_widget(),
	  and xfce_panel_plugin_menu_position_func(). This last function is
	  intended to be used as a callback function for gtk_menu_popup().
	* plugins/windowlist/windowlist.c: Remove orientation change handler. 
	  There is no need to check both for orientation changes and screen
	  position changes.
	* plugins/windowlist/windowlist.c: Set size for plugin widget instead
	  of button. The size is not properly updated on orientation changes 
	  otherwise.

2007-09-28 13:46 jasper

	* libxfce4panel/xfce-panel-plugin-iface.c,
	  libxfce4panel/xfce-panel-plugin-iface.h,
	  plugins/launcher/launcher.c,
	  plugins/windowlist/windowlist.c: Add convenience functions for 
	  plugin popup menus and adjust launcher and windowlist to make