@@ -45,6 +45,10 @@ desktop_in_files =							\
 	xfce4-panel-manager.desktop.in
 desktop_DATA =								\
 	$(desktop_in_files:.desktop.in=.desktop)
+
+settingsdir = $(datadir)/xfce4/settings-dialogs
+settings_DATA = $(desktop_DATA)
+
 @INTLTOOL_DESKTOP_RULE@
 
 CLEANFILES =								\
