@@ -1,3 +1,12 @@
+2008-08-01 00:00 nick
+
+    * Fix a bunch of compiler warnings.
+    * Remove deprecated gtk_type_class.
+    * Fix icon update hook in launcher, this is bothering me for a long time.
+    * Install settings desktop file in $(datadir)/xfce4/settings-dialogs too.
+    * Fix german typo: Bug 4066.
+    * Fix dnd to launcher: Bug 3958.
+
 2008-07-15 13:04 jannis
 
 	* autogen.sh: Change @REVISION@ substitution for git svn repositories
